project: enable full annotation processing
To get rid of the Maven warning about the annotation processing not
being explicitly enabled.